--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
