--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.0.9",
     "firebase": "^11.4.0",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-simple-typewriter": "^5.0.1",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.9"
